Update git & gradle configs